<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="pref_entry_value_on" translatable="false">On</string>
    <string name="hello">Hello World, ValidationToolsActivity!</string>
    <string name="app_name">BixinFactoryTestTools</string>
    <string name="TestTitleString">Factory Test</string>
    <string name="TestResultTitleString">Factory Test Result</string>
    <string name="TestResultTitleStringFail">Factory Test Result(Fail)</string>
    <string name="system_test_title">System</string>
    <string name="item_test_title">Items Test</string>
    <string name="test_info_title">Test Info</string>
    <string name="recovery_stage_title">Reset</string>
    <string name="display_test_title">Screen</string>
    <string name="ring_test_title">Ring</string>
    <string name="phone_test_title">Phone</string>
    <string name="accessories_test_title">Accessories</string>
    <string name="wireless_test_title">Wireless</string>
    <string name="sensor_test_title">Sensor</string>
    <string name="camera_test_title">Camera</string>
    <string name="key_test_title">Key</string>
    <string name="full_test_title">Full Test</string>
    <string name="test_result_title">Test Result</string>
    <string name="version_test">Version test</string>
    <string name="rf_cali_test">RF CALI test</string>
    <string name="rtc_test">RTC test</string>
    <string name="lcd_test">LCD test</string>
    <string name="backlight_test">Backlight test</string>
    <string name="backlight_des">Are saw backlight and keypad light flashes twice in a row?</string>
    <string name="touchpoint_test">Single touch point test</string>
    <string name="touchpoint_info">Please draw a line connecting two days on the diagonal</string>
    <string name="touchpoint_info_fail">Single-touch failed, please click the back key to retry</string>
    <string name="muti_touchpoint_test">Muti-touch point test</string>
    <string name="muti_touchpoint_info">Move two balls simultaneously by two touch</string>
    <string name="ctp_test">CTP test</string>
    <string name="vibrator_test">Ringtones motor test</string>
    <string name="melody_test">Melody test</string>
    <string name="melody_play_info">Whether to play and vibration?</string>
    <string name="phone_loopback_test">Phone loopback test</string>
    <string name="phone_loopback_test_notice">Please say whatever to the mic</string>
    <string name="phone_loopback_result_check">Did you hear the loopback?</string>
    <string name="wifi_result_check">Have find the device?</string>
    <string name="gps_result_check">Have find the device?</string>
    <string name="sim_test">SIM card test</string>
    <string name="device_test">Device test</string>
    <string name="phone_call_test">Phone call test</string>
    <string name="phone_call_info">Normal play and hang up the phone</string>
    <string name="sdcard_test">SD card test</string>
    <string name="no_sdcard">No SD card</string>
    <string name="charger_test">Charger test</string>
    <string name="headset_test">Headset test</string>
    <string name="fm_test">FM test</string>
    <string name="soundtrigger_test">SoundTrigger test</string>
    <string name="mobile_tv_test">Mobile test</string>
    <string name="atv_test">ATV test</string>
    <string name="wifi_test">WIFI test</string>
    <string name="bt_test">Bluetooth test</string>
    <string name="gps_test">GPS test</string>
    <string name="btut_test">BTEUT test</string>
    <string name="gravity_sensor_test">gravity sensor test</string>
    <string name="oritention_sensor_test">Orientation sensor test</string>
    <string name="proximity_sensor_test">Proximity sensor test</string>
    <string name="light_sensor_test">Ligth sensor test</string>
    <string name="camera_test">Camera test</string>
    <string name="key_test">Key test</string>
    <string name="key_test_info">The keys are in line with</string>
    <string name="front_camera_title_text">Front Camera Test</string>
    <string name="back_camera_title_text">Back Camera Test</string>
    <string name="camera_failue">The camera test fails!</string>
    <string name="camera_pass">The camera test passes!</string>
    <string name="take_picture">Take picture</string>
    <string name="preview">Preview</string>
    <string name="text_pass">Pass</string>
    <string name="text_fail">Fail</string>
    <string name="text_na">Not test</string>
    <string name="text_change_camera">Change Camera</string>
    <string name="text_pass_msg">PASS</string>
    <string name="test_result_ID_title">ID</string>
    <string name="test_result_case_title">Test Case</string>
    <string name="test_result_result_title">Result</string>
    <string name="back_camera_test">Back camera test</string>
    <string name="front_camera_test">Front camera test</string>
    <string name="test_case_name">Test case</string>
    <string name="test_case_result">Test result</string>
    <string name="key_test_home">Home</string>
    <string name="key_test_menu">Menu</string>
    <string name="key_test_back">Back</string>
    <string name="key_test_search">Search</string>
    <string name="key_test_camera">Camera</string>
    <string name="key_test_volume_up">Volume up</string>
    <string name="key_test_volume_down">Volume down</string>
    <string name="key_test_power">Power</string>
    <string name="key_test_finish">Finish</string>
    <string name="android_version">Android Version:</string>
    <string name="prop_version">Prop Version:</string>
    <string name="build_number">Build Number:</string>
    <string name="device_sn">Device Sn:</string>
    <string name="osensor_orien">"Orientation is "</string>
    <string name="osensor_info">Compass needle is rotated</string>
    <string name="sensor_show_msg">Tilt the phone, can you see the arrow?</string>
    <string name="psensor_btn_on">On</string>
    <string name="psensor_btn_off">Off</string>
    <string name="psensor_msg_value">Value :</string>
    <string name="psensor_msg_value_far">Distant</string>
    <string name="psensor_msg_value_near">Closer</string>
    <string name="psensor_msg_status">PSensor Status :</string>
    <string name="psensor_msg_data">PROX_DATA =</string>
    <string name="lsensor_value">Lsensor value =</string>
    <string name="wifi_title_text">Wifi Test</string>
    <string name="wifi_enabled_failure">Device can not enabled</string>
    <string name="wifi_Initializing">Initializing...</string>
    <string name="wifi_scaning">Scanning...</string>
    <string name="wifi_dialog">Please wait and don\' exit!</string>
    <string name="wifi_device_ok">The wifi device is ok!</string>
    <string name="wifi_scan_failure">No wifi device found</string>
    <string name="wifi_stop_device">Stopping wifi device,please wait...</string>
    <string name="rtc_tag">System time\n</string>
    <string name="ctp_tag">Enter CTP mode, please waiting ...</string>
    <string name="btut_tag">Enter BTEUT mode, please waiting ...</string>
    <string name="bluetooth_search_title">Bluetooth Searching</string>
    <string name="start_searching">Start searching !</string>
    <string name="bluetooth_failue">The bluetooth test fails!</string>
    <string name="bluetooth_pass">The bluetooth test passes!</string>
    <string name="gps_title_text">GPS Test</string>
    <string name="gps_result_ok">The GPS test passes!</string>
    <string name="gps_result_failure">The GPS test fails!</string>
    <string name="gps_satellite_msg">The satellite count is </string>
    <string name="gps_not_enabled_msg">The GPS is not enabled</string>
    <string name="gps_show_settings">Show GPS Settings</string>
    <string name="gps_time_msg">Seconds passed</string>
    <string name="phone_call_text">Calling 112...</string>
    <string name="sim_card_test_tittle">SIM card test</string>
    <string name="sim_card_0_result">SIM card 1 test result</string>
    <string name="sim_card_1_result">SIM card 2 test result</string>
    <string name="sim_test_result">Test result</string>
    <string name="test_completed">Test Complete</string>
    <string name="micphone_msg">Voice cycle test</string>
    <string name="single_sim_card_test">Single SIM card test</string>
    <string name="multiple_sim_card_test">Multi SIM card test</string>
    <string name="vibrator_test_tag">Touch screen to vibrator</string>
    <string name="sdcard_test_tag">Testing sdcard</string>
    <string name="sdcard_test_write">Writing file...</string>
    <string name="sdcard_test_read">Reading file...</string>
    <string name="sdcard_test_result_success">Internal card read and write success</string>
    <string name="sdcard_test_result_fail">Internal card read and write fail</string>
    <string name="status">Status:</string>
    <string name="plugged">Plugged:</string>
    <string name="battery_title_text">Charger Test</string>
    <string name="headset_plugged">Plugged,you can test headset hook if has.</string>
    <string name="headset_unplugged">Unplugged</string>
    <string name="headset_notice">Please test by step</string>
    <string name="please_plugin">First ,please plugin your headset</string>
    <string name="please_press_answer_key">Second ,please press your headset answer key</string>
    <string name="please_test_loopback">Now,you can test the loopback by headset</string>
    <string name="headset_answer_key">Answer key</string>
    <string name="linear_dialog_btn_ok">OK</string>
    <string name="linear_dialog_msg_pass">PASS!</string>
    <string name="linear_dialog_msg_fail">FAIL!</string>
    <string name="melody_play_tag">Playing melody : </string>
    <string name="fm_test_wb_button_test">Select Wave Band</string>
    <string name="input_tag">Input wave band</string>
    <string name="wb_text">Playing</string>
    <string name="wb_text_info">Are receive radio and play</string>
    <string name="fm_dialog_tittle">Error</string>
    <string name="fm_dialog_message">Please plug headset!</string>
    <string name="fm_dialog_hardwaresuppot">Please ensure hardware is supported!</string>
    <string name="fm_dialog_button">OK</string>
    <string name="fm_dialog_know">I know</string>
    <string name="voltage">Battery Voltage:</string>
    <string name="test_info_imei">IMEI</string>
    <string name="test_info_blt">BT</string>
    <string name="test_info_phase_check">PHASE  CHECK</string>
    <string name="bt_addr">Bluetooth Address:</string>
    <string name="bt_state">Bluetooth State:</string>
    <string name="bt_device">Bluetooth Devices:</string>
    <string name="wifi_addr">Wifi Address:</string>
    <string name="wifi_state">Wifi State:</string>
    <string name="wifi_device">Wifi Devices:</string>
    <string name="charger_electronic">Charger Electronic:</string>
    <string name="charger_Voltage">Charger Voltage:</string>
    <string name="ntc_temperature">NTC Temperature:</string>
    <string name="charging_test">Being tested, please wait!</string>
    <string name="uid">UID</string>
    <string name="save_test_results_title">Storage test</string>
    <string name="signal_test_title">4G signal test</string>
    <string name="title_emc">EMC :</string>
    <string name="title_ddr">DDR(RAM) :</string>
    <string name="fm_btn_play">Click play</string>
    <string name="play_microphone_recording">Play microphone recording</string>
    <string name="fixed_transmitting_frequency">Fixed transmitting frequency 98MHZ</string>
    <string name="fm_emission_test">FM emission test</string>
    <string name="product_information">Product information</string>
    <string name="hardware_product_information">Hardware product information：</string>
    <string name="software_product_information">Software product information：</string>
    <string name="baseband_version">Baseband version：</string>
    <string name="signal_operators">Operators :</string>
    <string name="network_type">Network type :</string>
    <string name="signal_level">Signal level :</string>
</resources>