<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            style="@style/itemTextTitleStyle"
            android:text="@string/test_info_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/testinfo_sn"
                style="@style/itemTextTitleStyle"
                android:text="@string/device_sn" />

            <TextView
                android:id="@+id/test_info_sn_dec"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/testinfo_imei"
                style="@style/itemTextTitleStyle"
                android:text="@string/test_info_imei" />

            <TextView
                android:id="@+id/test_info_imei_dec"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/testinfo_blt"
                style="@style/itemTextTitleStyle"
                android:text="@string/test_info_blt" />

            <TextView
                android:id="@+id/test_info_blt_dec"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/testinfo_wifi"
                style="@style/itemTextTitleStyle"
                android:text="@string/wifi_addr" />

            <TextView
                android:id="@+id/test_info_wifi_dec"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/testinfo_phase"
                style="@style/itemTextTitleStyle"
                android:text="@string/test_info_phase_check" />

            <TextView
                android:id="@+id/test_info_phase_dec"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/testinfo_test"
                style="@style/itemTextTitleStyle"
                android:text="@string/sim_test_result" />

            <TextView
                android:id="@+id/test_info_test_dec"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                style="@style/itemTextTitleStyle"
                android:text="@string/uid" />

            <TextView
                android:id="@+id/uid"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
