<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_test_title"
        style="@style/LayoutTitleStyle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/product_information" />

    <!--    <TextView
            android:id="@+id/tv_product_info"
            style="@style/ItemTextViewStyle" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_test_title"
        android:orientation="vertical">

        <TextView
            style="@style/itemTextTitleStyle"
            android:layout_marginTop="20dp"
            android:text="@string/hardware_product_information" />

        <TextView
            android:id="@+id/device_info"
            style="@style/ItemTextViewStyle" />

        <TextView
            style="@style/itemTextTitleStyle"
            android:layout_marginTop="10dp"
            android:text="@string/software_product_information" />

        <TextView
            android:id="@+id/android_version"
            style="@style/ItemTextViewStyle" />

        <TextView
            style="@style/itemTextTitleStyle"
            android:layout_marginTop="10dp"
            android:text="@string/baseband_version" />

        <TextView
            android:id="@+id/linux_version"
            style="@style/ItemTextViewStyle" />
    </LinearLayout>


</RelativeLayout>