<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"
    android:orientation="vertical">

    <TextView
        style="@style/LayoutTitleStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/wifi_test" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wifi_addr"
            style="@style/itemTextTitleStyle"
            android:text="@string/wifi_addr" />

        <TextView
            android:id="@+id/wifi_addr_content"
            style="@style/itemTextTitleStyle"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wifi_state"
            style="@style/itemTextTitleStyle"
            android:text="@string/wifi_state" />

        <TextView
            android:id="@+id/wifi_state_content"
            style="@style/itemTextTitleStyle"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/wifi_device"
        style="@style/itemTextTitleStyle"
        android:text="@string/wifi_device" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/tv_wifi_device_list"
            style="@style/ItemTextViewStyle" />
    </ScrollView>

</LinearLayout>