<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"
    android:orientation="vertical">

    <TextView
        style="@style/LayoutTitleStyle"
        android:layout_gravity="center_horizontal"
        android:text="@string/bt_test" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_addr"
            style="@style/itemTextTitleStyle"
            android:text="@string/bt_addr" />

        <TextView
            android:id="@+id/bt_addr_content"
            style="@style/itemTextTitleStyle"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_state"
            style="@style/itemTextTitleStyle"
            android:text="@string/bt_state" />

        <TextView
            android:id="@+id/bt_state_content"
            style="@style/itemTextTitleStyle"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/bt_device"
        style="@style/itemTextTitleStyle"
        android:text="@string/bt_device" />

    <ScrollView
        android:layout_marginTop="5dp"
        android:id="@+id/sv_bt_device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_bt_device_list"
            style="@style/ItemTextViewStyle" />
    </ScrollView>

</LinearLayout>