<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle">

    <TextView
        style="@style/LayoutTitleStyle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/charger_test" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/itemTextKeyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/statusTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/itemTextKeyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltage"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/voltageTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                style="@style/itemTextKeyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plugged"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/pluggedTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/electronicnoteTV"
                style="@style/itemTextKeyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charger_Voltage"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/electronicTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/batteryelectronicnoteTV"
                style="@style/itemTextKeyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charger_electronic"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/batteryelectronicTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:textColor="#ffffff" />
        </TableRow>

        <!-- SPRD Bug 773805:Show NTC temperature in charger test. @{ -->
        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/batterytemperature"
                style="@style/itemTextKeyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ntc_temperature"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/batterytemperatureTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:textColor="#ffffff" />
        </TableRow>
        <!-- @} -->
        <TableRow
            android:id="@+id/TableRow07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/test_resultTextView"
                style="@style/itemTextValueStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10px"
                android:text="@string/charging_test"
                android:textColor="#ffffff"
                android:visibility="gone" />
        </TableRow>
    </LinearLayout>

</RelativeLayout>