<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LayoutStyle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/LayoutTitleStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/gps_test" />

        <TextView
            android:id="@+id/txt_gps_test_pass"
            style="@style/itemTextTitleStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/itemTextTitleStyle"
                android:text="@string/gps_satellite_msg" />

            <TextView
                android:id="@+id/txt_gps_satellite_count"
                style="@style/itemTextTitleStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_gps_not_enabled"
            style="@style/itemTextTitleStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_gps_time_count"
                style="@style/itemTextTitleStyle" />

            <TextView
                style="@style/itemTextTitleStyle"
                android:text="@string/gps_time_msg" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_gps_satellite_info"
                style="@style/ItemTextViewStyle" />
        </ScrollView>

    </LinearLayout>

    <!--
		<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="@null">
		<Button android:id="@+id/btn_gps_pass"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/text_pass"
		/> <TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1" />
		<Button android:id="@+id/btn_gps_fail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/text_fail"
		/> </LinearLayout>
    -->

</LinearLayout>
